feat: Implement Notification Center component with real-time updates and accessibility features
feat: Create useValidatedForm hook for type-safe form handling with Zod validation

feat: Define authentication schemas for login, registration, password reset, and change password

feat: Add health-related schemas for vital signs, symptom logs, food journals, exercise logs, and sleep logs

feat: Centralize schema exports for easier imports across the application

feat: Develop medication schemas for reminders and prescription orders

test: Set up testing environment with Vitest and custom render utility for React components

feat: Add accessibility utilities for focus management and screen reader announcements

feat: Implement branding utility to derive color palette from primary color and apply CSS variables

chore: Configure Vitest for testing with coverage reporting and setup files

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
-    "welcomeMessage": "Welcome back, {{name}}!",
-    "dashboardTitle": "Dashboard",
+    "welcomeMessage": "Here's what's happening with your health today.",
+    "dashboardTitle": "Welcome back",
     "doctorsNav": "Doctors",
     "pharmaciesNav": "Pharmacies",
     "remindersNav": "Reminders",
